--- a/zaoduke/02.md
+++ b/zaoduke/02.md
@@ -1,7 +1,7 @@
 # 知行社的前端早读课 第2期
 ## wtfjs
 ### 背景
-重所周之，JavaScript 有很多坑。写着写着，可能就想说 WTF（Want to f*ck）。
+众所周之，JavaScript 有很多坑，或者说是奇怪的特性。从坑里爬出来后，可能就想 WTF（Want to f*ck） XD。
 
 ### 概要
 这是一系列的 JavaScript 语言的有(hei)趣(keji)技巧的合集，如
