--- a/zaoduke/02.md
+++ b/zaoduke/02.md
@@ -24,7 +24,7 @@ Promise 是解决用回调处理复杂的异步流程导致代码结构混乱（
 ### 概要
 用八段代码来介绍 Promise 的特性。推荐用过 Promise 的阅读，会对 Promise 有更深入的了解。
 
-阅读地址：http://www.css88.com/archives/7760
+阅读地址：http://www.jianshu.com/p/ecbd0d10a075
 
 如果没用过 Promise，建议先读下 [要优雅，也要浪漫的Promise](https://github.com/SinanJS/sinan-blog/blob/master/ES6%E4%B8%AD%E7%9A%84Promise%E5%AF%B9%E8%B1%A1%E8%AF%A6%E8%A7%A3.md)。
 
