--- a/zaoduke/spider/2017-08-15.md
+++ b/zaoduke/spider/2017-08-15.md
@@ -1,4 +1,4 @@
-今天 07:15:18 抓取在[掘金网](https://juejin.im/)上最新发布的50篇前端文章，概要：JavaScript(4篇),CSS(3篇),React(2篇),Angular(2篇),Vue(2篇),Node.js(2篇),工程化(1篇),Service(1篇),Yeoman(1篇),拷贝(1篇),变量(1篇),weex(1篇),浅析(1篇),ES6(1篇),V8(1篇),前端(1篇),HTML5(1篇),构造函数(1篇),model(1篇),cli(1篇),异步控制(1篇),Nuxt(1篇),26(1篇),Alfred(1篇),ReactNative(1篇),Frame(1篇),1.0(1篇),DOM(1篇),Sass(1篇),初识(1篇),插件(1篇),橡皮擦(1篇),文本编辑(1篇),wepy(1篇),Canvas(1篇),AE(1篇),API(1篇),Vue.js(1篇),源码(1篇),canvas(1篇),Web(1篇)。
+今天 16:06:43 抓取在[掘金网](https://juejin.im/)上最新发布的50篇前端文章，概要：JavaScript(4篇),CSS(3篇),Vue(3篇),React(2篇),Angular(2篇),HTML5(1篇),Yeoman(1篇),前端(1篇),26(1篇),Frame(1篇),源码(1篇),Service(1篇),网关(1篇),拷贝(1篇),变量(1篇),weex(1篇),浅析(1篇),ES6(1篇),V8(1篇),简历(1篇),Beta(1篇),构造函数(1篇),model(1篇),cli(1篇),工程化(1篇),Nuxt(1篇),异步控制(1篇),Alfred(1篇),ReactNative(1篇),1.0(1篇),DOM(1篇),Sass(1篇),初识(1篇),插件(1篇),橡皮擦(1篇),文本编辑(1篇),wepy(1篇),Canvas(1篇),AE(1篇),API(1篇),Vue.js(1篇)。
 
 详情如下：
 
@@ -39,6 +39,22 @@
 
 阅读地址: https://juejin.im/post/5987acfd6fb9a03c502288f3
 
+## 标签：Vue
+### 前端每周清单半年盘点之 Vue.js 篇
+> 前端每周清单专注前端领域内容，以对外文资料的搜集为主，帮助开发者了解一周前端热点；分为新闻热点、开发教程、工程实践、深度阅读、开源项目、巅峰人生等栏目。欢迎关注【前端之巅】微信公众号（ID：frontshow），及时获取前端每周清单；本文则是对于半年来发布的前端每周清单中的 Vu…
+
+阅读地址: https://juejin.im/post/59928d55518825486f1e8369
+
+### Vue组件通信实践记录
+> 组件通信 几乎所有的mvvm框架中都要涉及组件通信的功能（吐槽一下knockout,毕竟是鼻祖就先不说它了）。而且目前的前端形式来看，组件化是一个项目的基础。所以选好一个合适的框架后，随着组件的不断增加，业务的复杂度提升，组件之间的通信变得尤为重要。 实践方法 由于更换新的框架，…
+
+阅读地址: https://juejin.im/post/5991522bf265da3e252a2b32
+
+### Vue 组件库实践和设计
+> 现在前端的快速发展，已经让组件这个模式变的格外重要。对于市面上的组件库，虽然能满足大部分的项目，但是一些小型细节方面和使用方面，或者UI库存在的一些bug，会让人很头疼。 那我们应该如何面对解决这些问题。俗话说自己动手丰衣足食。有些组件不用刻意去造。应该考虑如何去打造一个快速，兼…
+
+阅读地址: https://juejin.im/post/598965bd5188256da941872c
+
 ## 标签：React
 ### 学习 React.js 比你想象的要简单
 >  原文地址：Learning React.js is easier than you think 原文作者：Samer Buna 译文出自：掘金翻译计划 本文永久链接：https://github.com/xitu/gold-miner/blob/master/TODO/lear…
@@ -61,33 +77,41 @@
 
 阅读地址: https://juejin.im/post/598952a96fb9a03c4300952c
 
-## 标签：Vue
-### Vue 组件库实践和设计
-> 现在前端的快速发展，已经让组件这个模式变的格外重要。对于市面上的组件库，虽然能满足大部分的项目，但是一些小型细节方面和使用方面，或者UI库存在的一些bug，会让人很头疼。 那我们应该如何面对解决这些问题。俗话说自己动手丰衣足食。有些组件不用刻意去造。应该考虑如何去打造一个快速，兼…
+## 标签：HTML5
+### 从HTML5与PromiseA+规范来看事件循环
+> 写在最前 本次分享一下从HTML5与PromiseA+规范来迅速理解一波事件循环中的microtask 与macrotask。 欢迎关注我的博客，不定期更新中—— ## 先来看段代码 setTimeout(function() { console.log('setTimeout1…
 
-阅读地址: https://juejin.im/post/598965bd5188256da941872c
+阅读地址: https://juejin.im/post/598c595d6fb9a03c5f0c80e9
 
-### 基于文本相似度算法，分析 Vue 是抄出来的框架吗？
-> 本周一篇指摘 Vue 抄袭 Angular 的文章一石激起千层浪。为此，笔者作为中立吃瓜的 React 用户，分析了 13 个主流前端框架版本上万个变量的命名风格，应用自然语言处理中的文本相似度算法进行了分析，以对这一论点的有效性做出客观的评价。 思路 在分析书籍抄袭、论文查重等…
+## 标签：Yeoman
+### 使用Yeoman定制前端脚手架
+> 首先附上Yeoman官网：http://yeoman.io/ 我制作的前端脚手架：generator-jake-front 以及我在前端同学的分享会上的分享ppt：yeoman.key 如果想快速制作一个脚手架，并且不需要实现特别复杂的定制化，看完这篇文章足够，如果想要实现复杂的…
 
-阅读地址: https://juejin.im/post/5985abf9f265da3e345f4f97
+阅读地址: https://juejin.im/post/5991f2975188257c666c64f4
 
-## 标签：Node.js
-###  带你用 Vue 全家桶和 Node.js 完成一个聚合应用
->  平时会经常浏览一些网站充电，但是老是需要切换网站也很麻烦，所以就有了做这个小项目的想法。通过爬虫抓取一些网站，然后整合在一个应用中。虽然是个简单应用，但是五脏六腑俱全，适合 Vue 的新手学习。 项目地址 项目技术栈 Vue 全家桶 语言：ES6 UI：这里使用了Element…
+## 标签：前端
+### 在台湾参加前端大会是什么体验？
+>  前几天有幸受邀前去台湾参加Modernweb会议，并做了主题分享。两天的前端会议见闻让我对台湾的前端环境有更深入的了解，接下去我想从会议形式、主题、氛围、企业几个方面跟大家分享我的见闻。 形式今年的大会选择在台湾大学里面举办，地点是台大的社会科学院，一栋新建不久的教学楼（感觉他…
 
-阅读地址: https://juejin.im/post/59857c616fb9a03c5c6ffa91
+阅读地址: https://juejin.im/post/5991dd9351882548630c1670
 
-### [译] 所有你需要知道的关于完全理解 Node.js 事件循环及其度量
->  原文地址：All you need to know to really understand the Node.js Event Loop and its Metrics 原文作者：Daniel Khan 译文出自：掘金翻译计划 本文永久链接：https://github.co…
+## 标签：26
+### 前端每周清单第 26 期：Node.js 微服务实践，Vue.js 与 GraphQL，Angular 组件技巧，HeadlessChrome 攻防
+> 作者：王下邀月熊 编辑：徐川 前端每周清单专注前端领域内容，以对外文资料的搜集为主，帮助开发者了解一周前端热点；分为新闻热点、开发教程、工程实践、深度阅读、开源项目、巅峰人生等栏目。欢迎关注【前端之巅】微信公众号（ID：frontshow），及时获取前端每周清单。 新闻热点 国内…
 
-阅读地址: https://juejin.im/post/5984816a518825265674c8f6
+阅读地址: https://juejin.im/post/59916dd6f265da3e20770e63
 
-## 标签：工程化
-### 【上海线下活动】Web前端工程化架构实践 -- 沪江技术沙龙
-> 报名链接：http://www.huodongxing.com/event/5399668594900 Web前端工程化历经了：2011年的Shell＆(YUICompress || Google Closure Compiler)；基于Node.js的前端工具浮现，2013年G…
+## 标签：Frame
+### 翻译 | 使用A-Frame打造WebVR版《我的世界》
+>  原文地址：Minecraft in WebVR with HTML Using A-Frame 原文作者：Kevin Ngo 译者：Felix 校对：阿希 我是 Kevin Ngo，一名就职于 Mozilla VR 团队的 web 虚拟现实开发者，也是 A-Frame 的核心开…
 
-阅读地址: https://juejin.im/post/598bc9625188257d86430dea
+阅读地址: https://juejin.im/post/59917b13f265da3e1d211f61
+
+## 标签：源码
+### 探索 vue-spa 全家桶项目,解析配置,目录结构,路由以及状态管理的实现,附源码
+> 1.简介 项目是一个简单的权限管理页面,分为3个页面, 首页,账户中心,登录页 通过vue-router 对于路由做权限控制, 首页无需登录,跳转账户中心会自动检索是否登录, 登录之后首页的登录按钮变为退出按钮, 页面之间的的状态管理全部通过vuex进行管理 项目演示 项目用到的…
+
+阅读地址: https://juejin.im/post/59916da2f265da3e154b202c
 
 ## 标签：Service
 ### [译] 理解 Service Workers
@@ -95,11 +119,11 @@
 
 阅读地址: https://juejin.im/post/599163316fb9a03c3c14d751
 
-## 标签：Yeoman
-### 使用Yeoman定制前端脚手架
-> 首先附上Yeoman官网：http://yeoman.io/ 我制作的前端脚手架：generator-jake-front 以及我在前端同学的分享会上的分享ppt：yeoman.key 如果想快速制作一个脚手架，并且不需要实现特别复杂的定制化，看完这篇文章足够，如果想要实现复杂的…
+## 标签：网关
+### 使用 Node.js 搭建一个 API 网关
+>  原文地址：Building an API Gateway using Node.js 原文作者：Péter Márton 译文出自：掘金翻译计划 本文永久链接：https://github.com/xitu/gold-miner/blob/master/TODO/buildin…
 
-阅读地址: https://juejin.im/post/5991f2975188257c666c64f4
+阅读地址: https://juejin.im/post/5992769151882548b17f76a6
 
 ## 标签：拷贝
 ### ES6 变量声明与赋值：值传递、浅拷贝与深拷贝详解
@@ -137,17 +161,17 @@
 
 阅读地址: https://juejin.im/post/598e63b76fb9a03c4300a49e
 
-## 标签：前端
-### 在台湾参加前端大会是什么体验？
->  前几天有幸受邀前去台湾参加Modernweb会议，并做了主题分享。两天的前端会议见闻让我对台湾的前端环境有更深入的了解，接下去我想从会议形式、主题、氛围、企业几个方面跟大家分享我的见闻。 形式今年的大会选择在台湾大学里面举办，地点是台大的社会科学院，一栋新建不久的教学楼（感觉他…
+## 标签：简历
+### 送给大家一个好看的简历神器
+> 很多人看到里边有好看的东西就习惯性的点进来看看，还一边点一边想 —— 好看的简历我见多了，你这个又能好看到哪里去。我想差不多可以： 哪里 吧 因为最近有在准备简历，就习惯性的找一找有没有现成的简历模板。结果全是付费的，丑的收5块，稍微讲究一点的就差不多要10块钱了，这让一个普通家…
 
-阅读地址: https://juejin.im/post/5991dd9351882548630c1670
+阅读地址: https://juejin.im/post/59926d2251882548997aa2f8
 
-## 标签：HTML5
-### 从HTML5与PromiseA+规范来看事件循环
-> 写在最前 本次分享一下从HTML5与PromiseA+规范来迅速理解一波事件循环中的microtask 与macrotask。 欢迎关注我的博客，不定期更新中—— ## 先来看段代码 setTimeout(function() { console.log('setTimeout1…
+## 标签：Beta
+### 来自官方博客：Bootstrap 4 Beta 发布
+>  本文翻译自 Boostrap 开发团队官方博客。 经过两年的开发，我们终于发布了第一个 beta 版本的 Bootstrap 4。在此之间，我们一共把代码彻彻底底搞砸了至少 27 次，提交了将近 5,000 个 commit，修改了 650+ 个文件，添加了 67,000 行代…
 
-阅读地址: https://juejin.im/post/598c595d6fb9a03c5f0c80e9
+阅读地址: https://juejin.im/post/5992647f6fb9a03c3c14da91
 
 ## 标签：构造函数
 ### 回顾Javascript构造函数
@@ -167,11 +191,11 @@
 
 阅读地址: https://juejin.im/post/5986f5c8f265da3e0e1053cf
 
-## 标签：异步控制
-### 使用async实现异步控制
-> async官方DOC 介绍 node安装 npm install async --save使用 var async = require('async')js文件 https://github.com/caolan/async/tree/master/dist async提供了很多…
+## 标签：工程化
+### 【上海线下活动】Web前端工程化架构实践 -- 沪江技术沙龙
+> 报名链接：http://www.huodongxing.com/event/5399668594900 Web前端工程化历经了：2011年的Shell＆(YUICompress || Google Closure Compiler)；基于Node.js的前端工具浮现，2013年G…
 
-阅读地址: https://juejin.im/post/5991f4826fb9a03c476d976d
+阅读地址: https://juejin.im/post/598bc9625188257d86430dea
 
 ## 标签：Nuxt
 ### 美团点评点餐 Nuxt.js 实战
@@ -179,11 +203,11 @@
 
 阅读地址: https://juejin.im/post/598aabe96fb9a03c335a8dde
 
-## 标签：26
-### 前端每周清单第 26 期：Node.js 微服务实践，Vue.js 与 GraphQL，Angular 组件技巧，HeadlessChrome 攻防
-> 作者：王下邀月熊 编辑：徐川 前端每周清单专注前端领域内容，以对外文资料的搜集为主，帮助开发者了解一周前端热点；分为新闻热点、开发教程、工程实践、深度阅读、开源项目、巅峰人生等栏目。欢迎关注【前端之巅】微信公众号（ID：frontshow），及时获取前端每周清单。 新闻热点 国内…
+## 标签：异步控制
+### 使用async实现异步控制
+> async官方DOC 介绍 node安装 npm install async --save使用 var async = require('async')js文件 https://github.com/caolan/async/tree/master/dist async提供了很多…
 
-阅读地址: https://juejin.im/post/59916dd6f265da3e20770e63
+阅读地址: https://juejin.im/post/5991f4826fb9a03c476d976d
 
 ## 标签：Alfred
 ### 用 Node.js 把玩一番 Alfred Workflow
@@ -196,12 +220,6 @@
 > 又是一周过去了，似乎上周我只更新了一篇文章，最近工作实在太忙，望大家见谅。今天要讲的还是布局相关的，之前已经对布局中主要属性做了介绍，这次，会对布局中其他属性进行介绍。 alignSelf alignSelf是指相对于父容器，自身的位置，有auto,flex-start,flex…
 
 阅读地址: https://juejin.im/post/59898948f265da3e282bd030
-
-## 标签：Frame
-### 翻译 | 使用A-Frame打造WebVR版《我的世界》
->  原文地址：Minecraft in WebVR with HTML Using A-Frame 原文作者：Kevin Ngo 译者：Felix 校对：阿希 我是 Kevin Ngo，一名就职于 Mozilla VR 团队的 web 虚拟现实开发者，也是 A-Frame 的核心开…
-
-阅读地址: https://juejin.im/post/59917b13f265da3e1d211f61
 
 ## 标签：1.0
 ### 腾讯发布 Omix 1.0 - 用 JSX 或 hyperscript 创建用户界面
@@ -274,21 +292,3 @@
 > 写在前面： 使用 vue-cli 可以快速创建 vue 项目，vue-cli很好用，但是在最初搭建环境安装vue-cli及相关内容的时候，对一些人来说是很头疼的一件事情，本人在搭建vue-cli的项目环境的时候也是踩了相当多的坑，特此写了一篇搭建环境的教程，每一步尽量详细解析。需…
 
 阅读地址: https://juejin.im/post/597eee92f265da3e2e56e37c
-
-## 标签：源码
-### 探索 vue-spa 全家桶项目,解析配置,目录结构,路由以及状态管理的实现,附源码
-> 1.简介 项目是一个简单的权限管理页面,分为3个页面, 首页,账户中心,登录页 通过vue-router 对于路由做权限控制, 首页无需登录,跳转账户中心会自动检索是否登录, 登录之后首页的登录按钮变为退出按钮, 页面之间的的状态管理全部通过vuex进行管理 项目演示 项目用到的…
-
-阅读地址: https://juejin.im/post/59916da2f265da3e154b202c
-
-## 标签：canvas
-### 基于canvas实现波浪式绘制图片
-> 写在最前 本次的分享是一个基于canvas的更新图片特效实现。其中主要涉及canvas中getImageData()、putImageData()、toDataURL()方法的使用。效果请看下面。 欢迎关注我的博客，不定期更新中—— PS:请在本地服务器中打开页面，因谷歌浏览器中…
-
-阅读地址: https://juejin.im/post/598471e3f265da3e2a2f8147
-
-## 标签：Web
-### Web 端的下一代三维图形
->  原文地址：Next-generation 3D Graphics on the Web 原文作者：Dean Jackson 译文出自：掘金翻译计划 本文永久链接：https://github.com/xitu/gold-miner/blob/master/TODO/next-g…
-
-阅读地址: https://juejin.im/post/5983208c5188253c6f2d185d
